--- a/index.html
+++ b/index.html
@@ -76,4 +76,11 @@
     
 
     <footer>
-        <p><a href="https://github.com/Stephaniechatter/Front-End/tree/main/Skyrim" target="_blank">Open-sourced</a> 
+        <p><a href="https://github.com/Stephaniechatter/ExploreSkyrim/tree/main" target="_blank">Open-sourced</a> 
+            on GitHub <a href="https://github.com/Stephaniechatter" target="_blank">©Stephanie Chatterton</a>.
+             Hosted on <ahref="https://exploreskyrim.netlify.app/Netlify" target="_blank">Netlify</a></p>
+    </footer>
+
+    <script src="js/script.js"></script>
+</body>
+</html
